--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
         "aws-amplify": "^1.1.36",
         "aws-amplify-react-native": "^2.1.16",
         "expo": "^33.0.0",
+        "expo-font": "^5.0.1",
+        "native-base": "^2.13.8",
         "react": "16.8.3",
         "react-dom": "^16.8.6",
         "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
         "react-native-elements": "^1.1.0",
         "react-native-vector-icons": "^6.6.0",
         "react-native-web": "^0.11.4",
-        "react-navigation": "^3.11.1"
+        "react-navigation": "^3.12.1"
     },
     "devDependencies": {
         "babel-preset-expo": "^6.0.0"
